force-app/main/default/objects/Related_ATI_Job__c/Related_ATI_Job__c.object-meta.xml
<CustomObject>
    <label>Related ATI Job</label>
    <nameField>
        <displayFormat>ATI_JOB-{00000}</displayFormat>
        <label>Related ATI Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related ATI Job</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>