force-app/main/default/objects/Related_ATI_Job__c/fields/ATI_Job_Check__c.field-meta.xml
<CustomField>
    <fullName>ATI_Job_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATI Job Check</label>
    <type>Checkbox</type>
</CustomField>