force-app/main/default/objects/Related_ATI_Job__c/fields/ATI_ParentJob__c.field-meta.xml
<CustomField>
    <fullName>ATI_ParentJob__c</fullName>
    <label>ATI Job</label>
    <referenceTo>ATI_Job__c</referenceTo>
    <relationshipLabel>Related ATI Jobs</relationshipLabel>
    <relationshipName>Related_ATI_Jobs1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>