force-app/main/default/objects/Related_ATI_Job__c/fields/Cloned_ATI_Job__c.field-meta.xml
<CustomField>
    <fullName>Cloned_ATI_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ATI Job</label>
    <referenceTo>ATI_Job__c</referenceTo>
    <relationshipLabel>Related ATI Job (Cloned ATI Job)</relationshipLabel>
    <relationshipName>Related_ATI_Job</relationshipName>
    <type>Lookup</type>
</CustomField>